# hermes-windows

./: .gitignore  README.md  generate_key.py  index.html  package-lock.json  package.json
.github/workflows/: build-windows.yml
scripts/: bundle-runtime.py  generate-icons.py
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: hermes_chat_repl.py  hermes_chat_server.py
src-tauri/src/: lib.rs  main.rs
